--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "basic-api-server",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage --verbose",
-    "start": "node index.js"
+    "start": "NODE_ENV=production node index.js",
+    "test": "NODE_ENV=test jest --coverage --verbose"
   },
   "repository": {
     "type": "git",
